remove unnecessary files

--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 <body>
   <div id="app"></div>
   <script>__REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__</script>
-</body>
+<script type="text/javascript" src="assets/output.a1316068a87882b4d21b.bundle.js"></script></body>
 </html>
